# procurement-ai-assistant

./: .gitignore  Dockerfile  README.md  env.yaml  makefile  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci-cd.yml
data/csv/: brand_performance.csv  orders_summary.csv  products_simple.csv
frontend/: package-lock.json  package.json
frontend/docs/: blueprint.md
frontend/src/ai/: dev.ts
frontend/src/ai/flows/: generate-dynamic-search-queries.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(main_app_layout)/: layout.tsx  page.tsx
frontend/src/app/(main_app_layout)/dashboard/: page.tsx
frontend/src/components/: providers.tsx
frontend/src/components/dashboard/: category-breakdown-chart.tsx  cost-profit-margin-chart.tsx  top-products-table.tsx
frontend/src/components/filters/: filters-panel-content.tsx
frontend/src/components/layout/: app-main-content-area.tsx  app-nav-sidebar.tsx
frontend/src/components/search/: product-card.tsx  results-list.tsx  search-bar.tsx
frontend/src/components/ui/: sidebar.tsx
frontend/src/hooks/: use-mobile-sidebar-fix.ts
frontend/src/types/: index.ts
st_app/: app.py
superlinked_app/: __init__.py  app.py  configs.py  index.py  nlq.py  query.py  schema.py  server.py
tests/: conftest.py  test_configs.py  test_nlq.py  test_schema.py
tests/data/: products_enriched.csv
